--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "gatsby-plugin-google-analytics": "^2.1.6",
     "gatsby-plugin-less": "^2.0.0-beta.5",
     "gatsby-plugin-netlify": "^2.1.3",
-    "gatsby-plugin-react-helmet": "next",
+    "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-sass": "^2.1.4",
     "gatsby-plugin-typography": "^2.3.2",
     "less": "^3.8.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.0",
+    "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
     "semantic-ui-less": "^2.3.3",
     "semantic-ui-react": "^0.82.1",
