--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "version": "1.0.0",
   "author": "Richard Blechinger <me@blechi.at>",
   "dependencies": {
+    "@emotion/core": "^10.0.15",
     "gatsby": "^2.13.51",
+    "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-google-analytics": "^2.1.6",
     "gatsby-plugin-less": "^2.0.0-beta.5",
     "gatsby-plugin-netlify": "^2.1.3",
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-sass": "^2.1.4",
     "gatsby-plugin-typography": "^2.3.2",
+    "gatsby-source-filesystem": "^2.1.8",
+    "gatsby-transformer-remark": "^2.6.10",
     "less": "^3.8.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -18,7 +22,11 @@
     "react-typography": "^0.16.19",
     "semantic-ui-less": "^2.3.3",
     "semantic-ui-react": "^0.82.1",
-    "typography": "^0.16.19"
+    "typography": "^0.16.19",
+    "typography-theme-github": "^0.16.19",
+    "typography-theme-grand-view": "^0.16.19",
+    "typography-theme-kirkham": "^0.16.19",
+    "typography-theme-stern-grove": "^0.16.19"
   },
   "keywords": [
     "gatsby"
