--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby": "^2.13.51",
     "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-google-analytics": "^2.1.6",
+    "gatsby-plugin-i18n": "^1.0.1",
     "gatsby-plugin-less": "^2.0.0-beta.5",
     "gatsby-plugin-netlify": "^2.1.3",
     "gatsby-plugin-react-helmet": "^3.1.3",
