--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-netlify": "^2.1.3",
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-sass": "^2.1.4",
+    "gatsby-plugin-transition-link": "^1.12.4",
     "gatsby-plugin-typography": "^2.3.2",
     "gatsby-source-filesystem": "^2.1.8",
     "gatsby-transformer-remark": "^2.6.10",
