--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "less": "^3.8.1",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
